Programs can be disabled 	* configure.ac: Support --disable-programs.
	* jconfig.bcc: move to...
	* jconfig.dj: move to...
	* jconfig.doc: move to...
	* jconfig.mac: move to...
	* jconfig.manx: move to...
	* jconfig.mc6: move to...
	* jconfig.sas: move to...
	* jconfig.st: move to...
	* jconfig.vc: move to...
	* jconfig.vms: move to...
	* jconfig.wat: move to...
	* makcjpeg.st: move to...
	* makdjpeg.st: move to...
	* makeapps.ds: Move to...
	* makefile.ansi: move to...
	* makefile.bcc: move to...
	* makefile.cfg: move to...
	* makefile.dj: Move to...
	* makefile.manx: move to...
	* makefile.mc6: move to...
	* makefile.mms: move to...
	* makefile.sas: move to...
	* makefile.unix: Move to...
	* makefile.vc: move to...
	* makefile.vms: move to...
	* makefile.wat: move to...
	* makelib.ds: move to...
	* makeproj.mac: move to...
	* makljpeg.st: move to...
	* maktjpeg.st: move to...
	* makvms.opt: move to...
	* templates/jconfig.bcc: here.
	* templates/jconfig.dj: here.
	* templates/jconfig.doc: here.
	* templates/jconfig.mac: here.
	* templates/jconfig.manx: here.
	* templates/jconfig.mc6: here.
	* templates/jconfig.sas: here.
	* templates/jconfig.st: here.
	* templates/jconfig.vc: here.
	* templates/jconfig.vms: here.
	* templates/jconfig.wat: here.
	* templates/makcjpeg.st: here.
	* templates/makdjpeg.st: here.
	* templates/makeapps.ds: here.
	* templates/makefile.ansi: here.
	* templates/makefile.bcc: here.
	* templates/makefile.cfg: here.
	* templates/makefile.dj: here.
	* templates/makefile.manx: here.
	* templates/makefile.mc6: here.
	* templates/makefile.mms: here.
	* templates/makefile.sas: here.
	* templates/makefile.unix: here.
	* templates/makefile.vc: here.
	* templates/makefile.vms: here.
	* templates/makefile.wat: here.
	* templates/makelib.ds: here.
	* templates/makeproj.mac: here.
	* templates/makljpeg.st: here.
	* templates/maktjpeg.st: here.
	* templates/makvms.opt: here.

	* Makefile.am: Adjust.

git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,73 @@
+2006-10-24  Akim Demaille  <demaille@gostai.com>
+
+	Programs can be disabled
+	* configure.ac: Support --disable-programs.
+
+	* jconfig.bcc: move to...
+	* jconfig.dj: move to...
+	* jconfig.doc: move to...
+	* jconfig.mac: move to...
+	* jconfig.manx: move to...
+	* jconfig.mc6: move to...
+	* jconfig.sas: move to...
+	* jconfig.st: move to...
+	* jconfig.vc: move to...
+	* jconfig.vms: move to...
+	* jconfig.wat: move to...
+	* makcjpeg.st: move to...
+	* makdjpeg.st: move to...
+	* makeapps.ds: Move to...
+	* makefile.ansi: move to...
+	* makefile.bcc: move to...
+	* makefile.cfg: move to...
+	* makefile.dj: Move to...
+	* makefile.manx: move to...
+	* makefile.mc6: move to...
+	* makefile.mms: move to...
+	* makefile.sas: move to...
+	* makefile.unix: Move to...
+	* makefile.vc: move to...
+	* makefile.vms: move to...
+	* makefile.wat: move to...
+	* makelib.ds: move to...
+	* makeproj.mac: move to...
+	* makljpeg.st: move to...
+	* maktjpeg.st: move to...
+	* makvms.opt: move to...
+	* templates/jconfig.bcc: here.
+	* templates/jconfig.dj: here.
+	* templates/jconfig.doc: here.
+	* templates/jconfig.mac: here.
+	* templates/jconfig.manx: here.
+	* templates/jconfig.mc6: here.
+	* templates/jconfig.sas: here.
+	* templates/jconfig.st: here.
+	* templates/jconfig.vc: here.
+	* templates/jconfig.vms: here.
+	* templates/jconfig.wat: here.
+	* templates/makcjpeg.st: here.
+	* templates/makdjpeg.st: here.
+	* templates/makeapps.ds: here.
+	* templates/makefile.ansi: here.
+	* templates/makefile.bcc: here.
+	* templates/makefile.cfg: here.
+	* templates/makefile.dj: here.
+	* templates/makefile.manx: here.
+	* templates/makefile.mc6: here.
+	* templates/makefile.mms: here.
+	* templates/makefile.sas: here.
+	* templates/makefile.unix: here.
+	* templates/makefile.vc: here.
+	* templates/makefile.vms: here.
+	* templates/makefile.wat: here.
+	* templates/makelib.ds: here.
+	* templates/makeproj.mac: here.
+	* templates/makljpeg.st: here.
+	* templates/maktjpeg.st: here.
+	* templates/makvms.opt: here.
+
+	* Makefile.am: Adjust.
+
 2006-09-18  Akim Demaille  <akim@lrde.epita.fr>
 
 	* configure.ac, Makefile.am: New.
