config.hin 	* jconfig.cfg: Rename as... 	* jconfig.hin: this. 	This avoids trigerring Make rules in *.cfg, and is 	more traditional. 	* configure.ac: Adjust.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@89 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2006-10-24  Akim Demaille  <demaille@gostai.com>
 
+	config.hin
+	* jconfig.cfg: Rename as...
+	* jconfig.hin: this.
+	This avoids trigerring Make rules in *.cfg, and is
+	more traditional.
+	* configure.ac: Adjust.
+
+2006-10-24  Akim Demaille  <demaille@gostai.com>
+
 	Programs can be disabled
 	* configure.ac: Support --disable-programs.
 
