--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-31  Akim Demaille  <demaille@gostai.com>
+
+	Remove package macro definitions
+	* jconfig.hin: by hand.
+	This is not satisfying, since next time autoheader will be
+	run, it will include them again.
+
 2006-10-24  Akim Demaille  <demaille@gostai.com>
 
 	config.hin
