Upgrade from Automake 1.10. 	* build-aux/install-sh, build-aux/missing: Upgrade.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@146 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-07  Akim Demaille  <akim.demaille@free.fr>
 
+	Upgrade from Automake 1.10.
+	* build-aux/install-sh, build-aux/missing: Upgrade.
+
+2006-11-07  Akim Demaille  <akim.demaille@free.fr>
+
 	Upgrade config.*
 	* build-aux/config.guess, build-aux/config.sub: Upgrade.
 	From Automake 1.10.
