No longer special case jconfig.hin 	* bootstrap: here.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@162 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-11-07  Akim Demaille  <demaille@gostai.com>
 
+	No longer special case jconfig.hin
+	* bootstrap: here.
+
+2006-11-07  Akim Demaille  <demaille@gostai.com>
+
 	distcheck fixes
 	* Makefile.am (CLEANFILES): Remove jconfig.h related files.
 
