Don't install man pages when the programs are not installed. 	* Makefile.am (EXTRA_MANS, man_mans): New. 	(dist_man_MANS): Define only when PROGRAMS is set.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@190 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-11-15  Akim Demaille  <akim.demaille@gmail.com>
 
+	Don't install man pages when the programs are not installed.
+	* Makefile.am (EXTRA_MANS, man_mans): New.
+	(dist_man_MANS): Define only when PROGRAMS is set.
+
+2006-11-15  Akim Demaille  <akim.demaille@gmail.com>
+
 	Improvements
 	* Makefile.am (jconfig.h): Simplify the generation.
 	* build-aux/ax-prefix-config-h.m4: Fix the CONFIG_HEADERS ->
