Fixes for Win32/VC++. 	* djpeg.c: #warning is a GCC extension. Don't use it unless __GNUC__           is defined. 	* jerror.c: Define _WIN32_WINNT before including windows.h.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@248 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-28  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Fixes for Win32/VC++.
+	* djpeg.c: #warning is a GCC extension. Don't use it unless __GNUC__
+          is defined.
+	* jerror.c: Define _WIN32_WINNT before including windows.h.
+
 2006-11-15  Akim Demaille  <akim.demaille@gmail.com>
 
 	Don't install man pages when the programs are not installed.
