--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-19  Akim Demaille  <demaille@gostai.com>
+
+	Formatting changes
+	* templates/makefile.bcc: here.
+
 2006-11-28  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Fixes for Win32/VC++.
