vc80.pdb 	* Makefile.am (CLEANFILES): Add it.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@423 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-20  Akim Demaille  <akim.demaille@free.fr>
+
+	vc80.pdb
+	* Makefile.am (CLEANFILES): Add it.
+
 2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>
 
 	modify svn:ignore to add install-sh. 
