--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-07  Akim Demaille  <akim.demaille@free.fr>
+
+	* Makefile.am (CLEANFILES): Add *.exe.intermediate.manifest.
+
 2007-02-02  Akim Demaille  <akim@lrde.epita.fr>
 
 	Clean files.
