--disable-library 	* configure.ac: Support it. 	* Makefile.am: Use it.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@721 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-23  Akim Demaille  <demaille@gostai.com>
+
+	--disable-library
+	* configure.ac: Support it.
+	* Makefile.am: Use it.
+
 2007-03-07  Akim Demaille  <akim.demaille@free.fr>
 
 	* Makefile.am (CLEANFILES): Add *.exe.intermediate.manifest.
