Typo 	* Makefile.am: Fix endif.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@722 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-03-23  Akim Demaille  <demaille@gostai.com>
 
+	Typo
+	* Makefile.am: Fix endif.
+
+2007-03-23  Akim Demaille  <demaille@gostai.com>
+
 	--disable-library
 	* configure.ac: Support it.
 	* Makefile.am: Use it.
