Do not build dynamic version of libjpeg. 	* Makefile.am: Here.
git-svn-id: https://svn.gostai.com/svn/common/libjpeg-6b/jpeg-6b@726 f9a80dcf-8710-0410-9714-9a4fb6817a1c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-23  POTHIER Benoit  <pothier@gostai.com>
+
+	Do not build dynamic version of libjpeg.
+	* Makefile.am: Here.
+
 2007-03-23  Akim Demaille  <demaille@gostai.com>
 
 	Typo
