--- a/README
+++ b/README
@@ -92,7 +92,7 @@ be reliable, portable, industrial-strength code.  We do not claim to have
 achieved that goal in every aspect of the software, but we strive for it.
 
 We welcome the use of this software as a component of commercial products.
-No royalty is required, but we do ask for an acknowledgement in product
+No royalty is required, but we do ask for an acknowledgment in product
 documentation, as described under LEGAL ISSUES.
 
 
