--- a/README
+++ b/README
@@ -1,5 +1,9 @@
+This is libJPEG from The Independent JPEG Group, with patches to build
+with cmake and qibuild.
+
 The Independent JPEG Group's JPEG software
 ==========================================
+
 
 README for release 8d of 15-Jan-2012
 ====================================
